fixed mobile search gap on top

--- a/src/Components/Search/_search.scss
+++ b/src/Components/Search/_search.scss
@@ -158,7 +158,7 @@
     width: 100%;
     height: 130%;
     margin: 0;
-    margin-top: -2.5rem;
+    margin-top: -2.6rem;
     padding-top: 0.5rem;
     border-radius: 0;
     overflow: hidden;
